<resources>
    <string name="app_version" translatable="false">1.30.α</string>
    <string name="app_name">MythTV Android Frontend</string>
    <string name="app_short_name">MAF</string>
    <string name="item_network_title">Searching network for MythTV&#8230;</string>
	<string name="item_network_caption">Make sure you are on the same network as your MythTV Master Backend</string>
    <string name="exception">Exception</string>
	<string name="open">Open</string>
    <string name="close">Close</string>
	<string name="please_wait">Please wait&#8230;</string>
	<string name="data_loading">MythTV for Android Frontend is currently loading data from your backend. Please try again later.</string>
	<string name="menu_about">About</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_edit">Edit</string>
	<string name="menu_save">Save</string>
	<string name="menu_reset">Reset</string>
	<string name="menu_delete">Delete</string>
	<string name="menu_watch">Watch</string>
	<string name="menu_add">Add</string>
	<string name="menu_clear">Remove</string>
	<string name="menu_prefs">Prefs</string>
	<string name="menu_help">Help</string>
	<string name="menu_help_faq">FAQ</string>
	<string name="menu_help_troubleshoot">Troubleshoot</string>
	<string name="menu_help_issues">Issues</string>
	<string name="menu_help_release_notes">Release Notes</string>
	<string name="menu_help_not_connected">The internet is not currently available on your device.  Please check your connections and try again.</string>
	<string name="menu_guide_day">Select Day</string>
	<string name="preferences_title">Preferences</string>
	<string name="preferences_unset">No value selected</string>
	<string name="preferences_profiles">Profiles</string>
	<string name="preferences_profile_delete">Delete Profile</string>
	<string name="preferences_profile_loading">Retrieving Master Backend Details&#8230;</string>
	<string name="preference_home_profiles">Home Profiles</string>
	<string name="preference_home_profiles_summary">Modify your home profile settings</string>
	<string name="preference_home_profiles_select">Select Home Profile</string>
	<string name="preference_home_profiles_default">Selected Home Profile</string>
	<string name="preference_home_profiles_modify">Modify Home Profiles</string>
	<string name="preference_home_profiles_modify_summary">Edit Master Backend settings when watching on your home network.</string>
	<string name="preference_home_profiles_saved">Saved Home Profiles</string>
	<string name="preference_home_profiles_add">Add New Home Profile</string>
	<string name="preference_home_profiles_add_summary">Add a new Master Backend Profile on your home network.</string>
	<string name="preference_home_profiles_delete">Delete Home Profile</string>
	<string name="preference_home_profiles_delete_summary">Delete an existing Master Backend Profile.</string>
	<string name="preference_home_profiles_scan">Scan Network</string>
	<string name="preference_home_profiles_scan_summary">Scan network for MythTV Master Backend</string>
    <string name="preference_home_profiles_scan_scanning">Scanning network for MythTV Master Backend</string>
    <string name="preference_home_profiles_scan_error_title">MythTV Not Found</string>
	<string name="preference_home_profiles_scan_error_message">MythTV could not be found on your network.  Please make sure you are connected to Wifi on your Home Network.</string>
	<string name="preference_home_playback_profiles">Home Playback Profiles</string>
	<string name="preference_home_playback_profiles_summary">Modify your home playback profile settings</string>
	<string name="preference_home_playback_profiles_select">Select Home Playback Profile</string>
	<string name="preference_home_playback_profiles_default">Selected Home Playback Profile</string>
	<string name="preference_home_playback_profiles_modify">Modify Home Playback Profiles</string>
	<string name="preference_home_playback_profiles_modify_summary">Edit audio and video home playback profiles</string>
	<string name="preference_home_playback_profiles_saved">Configured Home Playback Profiles</string>
	<string name="preference_away_profiles">Away Profiles</string>
	<string name="preference_away_profiles_summary">Modify your away profile settings</string>
	<string name="preference_away_profiles_select">Select Away Profile</string>
	<string name="preference_away_profiles_default">Selected Away Profile</string>
	<string name="preference_away_profiles_modify">Modify Away Profiles</string>
	<string name="preference_away_profiles_modify_summary">Edit Master Backend settings when watching away from your home network, including 3G/4G connections.</string>
	<string name="preference_away_profiles_saved">Saved Away Profiles</string>
	<string name="preference_away_profiles_add">Add New Away Profile</string>
	<string name="preference_away_profiles_add_summary">Add a new Master Backend Profile not on your home network.</string>
	<string name="preference_away_profiles_delete">Delete Away Profile</string>
	<string name="preference_away_profiles_delete_summary">Delete an existing Master Backend Profile.</string>
	<string name="preference_away_playback_profiles">Away Playback Profiles</string>
	<string name="preference_away_playback_profiles_summary">Modify your away playback profile settings</string>
	<string name="preference_away_playback_profiles_select">Select Away Playback Profile</string>
	<string name="preference_away_playback_profiles_default">Selected Away Playback Profile</string>
	<string name="preference_away_playback_profiles_modify">Modify Away Playback Profiles</string>
	<string name="preference_away_playback_profiles_modify_summary">Edit audio and video away playback profiles</string>
	<string name="preference_away_playback_profiles_saved">Configured Away Playback Profiles</string>
	<string name="preference_location_profile_text_view_name">Name:</string>
	<string name="preference_location_profile_edit_text_name_hint">Home or 3G, etc.</string>
	<string name="preference_location_profile_text_view_name_error_invalid">Invalid Name</string>
	<string name="preference_location_profile_text_view_url">MythTV Master Backend Address:</string>
	<string name="preference_location_profile_edit_text_url_hint">http://192.168.10.200:6544/</string>
	<string name="preference_location_profile_text_view_url_error_invalid">Invalid MythTV Master Backend Address</string>
	<string name="preference_location_profile_text_view_url_error_already_exists">MythTV Master Backend Address already setup</string>
	<string name="preference_location_profile_text_view_wol">WOL Address (Optional):</string>
	<string name="preference_location_profile_edit_text_wol_hint">AA:BB:CC:DD:EE:FF</string>
	<string name="preference_location_profile_text_view_wol_error_invalid">Invalid MAC Address</string>
	<string name="preference_location_profile_not_connected">Master Backend could not be reached, please check your network settings</string>
	<string name="preference_playback_profile_text_view_name">Name:</string>
	<string name="preference_playback_profile_edit_text_name_hint">High Quality</string>
	<string name="preference_playback_profile_text_view_name_error_invalid">Invalid Name</string>
	<string name="preference_playback_profile_text_view_width">Width:</string>
	<string name="preference_playback_profile_edit_text_width_hint">Width in pixels</string>
	<string name="preference_playback_profile_text_view_width_error_invalid">Invalid Width</string>
	<string name="preference_playback_profile_text_view_height">Height:</string>
	<string name="preference_playback_profile_edit_text_height_hint">Height in pixels</string>
	<string name="preference_playback_profile_text_view_height_error_invalid">Invalid Height</string>
	<string name="preference_playback_profile_text_view_video_bitrate">Video Bitrate:</string>
	<string name="preference_playback_profile_edit_text_video_bitrate_hint">Video Bitrate</string>
	<string name="preference_playback_profile_text_view_video_bitrate_error_invalid">Invalid Video Bitrate</string>
	<string name="preference_playback_profile_text_view_audio_bitrate">Audio Bitrate:</string>
	<string name="preference_playback_profile_edit_text_audio_bitrate_hint">Audio Bitrate</string>
	<string name="preference_playback_profile_text_view_audio_bitrate_error_invalid">Invalid Audio Bitrate</string>
	<string name="preference_playback_profile_text_view_sample_rate">Audio Sample Rate:</string>
	<string name="preference_playback_profile_edit_text_sample_rate_hint">Audio Sample Rate</string>
	<string name="preference_playback_profile_text_view_sample_rate_error_invalid">Invalid Sample Rate</string>
	<string name="preference_program_guide">Program Guide</string>
	<string name="preference_program_guide_summary">Specify preferences for managing the program guide.</string>
	<string name="preference_program_guide_modify">Modify Program Guide Preferences</string>
	<string name="preference_program_guide_modify_summary">Edit Program Guide Preferences</string>
	<string name="preference_program_guide_days_title">Specify Program Guide Download Days</string>
	<string name="preference_program_guide_days_default">3</string>
	<string name="preference_program_guide_channel_icon_download_title">Download Channel Icons?</string>
	<string name="preference_program_guide_channel_icon_download_summary">Download Channel Icons?</string>
	<string name="preference_program_guide_allow_fast_channel_scrolling_title">Allow Fast Channel Scrolling?</string>
	<string name="preference_program_guide_allow_fast_channel_scrolling_summary">Handy for those with a large number of channels</string>
	<string name="preference_edit_error_dialog_title">Error</string>
	<string name="btn_ok">OK</string>
	<string name="btn_save">Save</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_home">Home</string>
	<string name="btn_home_ally">Use selected home profile</string>
	<string name="btn_away">Away</string>
	<string name="btn_away_ally">Use selected away profile</string>
	<string name="location_alert_error_title">No MythTV Master Backend profile!</string>
	<string name="location_alert_error_message">A connection to the MythTV Master Backend could not be established.  Make sure you setup your Home or Away profiles on the Preferences screen.</string>
	<string name="location_alert_error_message_not_connected">The MythTV Master Backend could not be reached.  Please verify your location profile settings.</string>
	<string name="location_alert_error_home_message">There are no Home profiles setup. Make sure you setup your Home profiles on the Preferences screen.</string>
	<string name="location_alert_error_away_message">There are no Away profiles setup. Make sure you setup your Away profiles on the Preferences screen.</string>
	<string-array name="action_list">
        <item>DVR</item>
        <item>MythMote</item>
    </string-array>
    <string name="tab_dvr">DVR</string>
    <string name="btn_recordings">Recordings</string>
    <string name="btn_recordings_ally">View current recordings</string>
    <string name="btn_upcoming">Upcoming</string>
    <string name="btn_upcoming_ally">View upcoming recordings</string>
    <string name="btn_guide">Guide</string>
    <string name="btn_guide_ally">View program guide</string>
    <string name="btn_recording_rules">Recording Rules</string>
    <string name="btn_recording_rules_ally">View recording rules, not implemented</string>
    <string name="btn_upcoming_dont_record">X</string>
    <string name="upcoming_today">Today</string>
	<string name="machineinfo_storage_directory">Directory:</string>
	<string name="machineinfo_storage_total">Total:</string>
	<string name="machineinfo_storage_free">Free:</string>
	<string name="machineinfo_storage_expirable">Expirable:</string>
	<string name="job_queue_status">Status:</string>
	<string name="job_queue_title">Title:</string>
	<string name="job_queue_type">Type:</string>
</resources>