<?xml version="1.0" encoding="utf-8"?>
<!--

    This file is part of MythTV Android Frontend

    MythTV Android Frontend is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    MythTV Android Frontend is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with MythTV Android Frontend.  If not, see <http://www.gnu.org/licenses/>.

    This software can be found at <https://github.com/MythTV-Clients/MythTV-Android-Frontend/>

-->


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableLayout
            android:id="@+id/TableLayoutPlaybackEditor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1" >

            <TextView
                android:id="@+id/preference_playback_profile_text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preference_playback_profile_text_view_name" >
            </TextView>

            <EditText
                android:id="@+id/preference_playback_profile_edit_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/preference_playback_profile_edit_text_name_hint" >
            </EditText>

            <TextView
                android:id="@+id/preference_playback_profile_text_view_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preference_playback_profile_text_view_width" >
            </TextView>

            <EditText
                android:id="@+id/preference_playback_profile_edit_text_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/preference_playback_profile_edit_text_width_hint" >
            </EditText>

            <TextView
                android:id="@+id/preference_playback_profile_text_view_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preference_playback_profile_text_view_height" >
            </TextView>

            <EditText
                android:id="@+id/preference_playback_profile_edit_text_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/preference_playback_profile_edit_text_height_hint" >
            </EditText>

            <TextView
                android:id="@+id/preference_playback_profile_text_view_video_bitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preference_playback_profile_text_view_video_bitrate" >
            </TextView>

            <EditText
                android:id="@+id/preference_playback_profile_edit_text_video_bitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/preference_playback_profile_edit_text_video_bitrate_hint" >
            </EditText>

            <TextView
                android:id="@+id/preference_playback_profile_text_view_audio_bitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preference_playback_profile_text_view_audio_bitrate" >
            </TextView>

            <EditText
                android:id="@+id/preference_playback_profile_edit_text_audio_bitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/preference_playback_profile_edit_text_audio_bitrate_hint" >
            </EditText>

            <TextView
                android:id="@+id/preference_playback_profile_text_view_sample_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preference_playback_profile_text_view_sample_rate" >
            </TextView>

            <EditText
                android:id="@+id/preference_playback_profile_edit_text_sample_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/preference_playback_profile_edit_text_sample_rate_hint" >
            </EditText>

            <TableRow
                android:id="@+id/TableRow01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnPreferencePlaybackProfileCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/btn_cancel" >
                </Button>

                <Button
                    android:id="@+id/btnPreferencePlaybackProfileSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/btn_save" >
                </Button>
            </TableRow>
        </TableLayout>
    </ScrollView>
