<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:padding="1dp">
	       <TextView
	           android:id="@+id/textView_storagegroup_directory_header"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:paddingRight="2dp"
	           android:textStyle="bold"
	           android:text="@string/machineinfo_storage_directory" />
		<TextView
			android:id="@+id/textView_storagegroup_directory"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/body_text_2"/>
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:padding="1dp">
	       <TextView
	           android:id="@+id/textView_storagegroup_total_header"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:paddingRight="2dp"
	           android:textStyle="bold"
	           android:text="@string/machineinfo_storage_total" />
		<TextView
			android:id="@+id/textView_storagegroup_total"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/body_text_2"/>
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:padding="1dp">
	       <TextView
	           android:id="@+id/textView_storagegroup_free_header"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:paddingRight="2dp"
	           android:textStyle="bold"
	           android:text="@string/machineinfo_storage_free" />
		<TextView
			android:id="@+id/textView_storagegroup_free"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/body_text_2"/>
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:padding="1dp">
	       <TextView
	           android:id="@+id/textView_storagegroup_expirable_header"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:paddingRight="2dp"
	           android:textStyle="bold"
	           android:text="@string/machineinfo_storage_expirable" />
		<TextView
			android:id="@+id/textView_storagegroup_expirable"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/body_text_2"/>
	</LinearLayout>

    <View style="@style/BackendStatusItemSeparator"/>
    
</LinearLayout>
