<?xml version="1.0" encoding="utf-8"?>
<!--

    This file is part of MythTV Android Frontend

    MythTV Android Frontend is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    MythTV Android Frontend is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with MythTV Android Frontend.  If not, see <http://www.gnu.org/licenses/>.

    This software can be found at <https://github.com/MythTV-Clients/MythTV-Android-Frontend/>

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="1dp"
	    android:orientation="horizontal">
        <TextView
			android:id="@+id/textView_job_program_title_header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="2dp"
            android:textStyle="bold"
			android:text="@string/job_queue_title"/>
		<TextView
			android:id="@+id/textView_job_program_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/body_text_2"/>
	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="1dp"
	    android:orientation="horizontal">
        <TextView
			android:id="@+id/textView_job_type_header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="2dp"
            android:textStyle="bold"
			android:text="@string/job_queue_type"/>
		<TextView
			android:id="@+id/textView_job_type"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/body_text_2"/>
	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="1dp"
	    android:orientation="horizontal">
        <TextView
			android:id="@+id/textView_job_status_header"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="2dp"
            android:textStyle="bold"
			android:text="@string/job_queue_status"/>
		<TextView
			android:id="@+id/textView_job_status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/body_text_2"/>
	</LinearLayout>
	
    <View style="@style/BackendStatusItemSeparator"/>
	
    
</LinearLayout>
